# JUST-L

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/ex1/: in1.txt  out1-1.txt  out1-2.txt  out1-3.txt
examples/ex2/: in2.txt
examples/ex3/: in3.txt  out3.txt
examples/ex4/: in4.txt  out4.txt
src/just_l/: JUST-L.ipynb  __init__.py  app.py  block.py  const.py  generate.py  visualize.py
