[project]
name = "just-l"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "matyaki-matyaki" }
]
dependencies = [
    "mypy>=1.13.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "streamlit>=1.40.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/just_l"]
