[tool.poetry]
name = "just-l"
version = "0.1.0"
description = "Visualizer of the puzzle game JUSL-L"
authors = ["matyaki-matyaki"]
requires-python = ">=3.8"

[tool.poetry.dependencies]
mypy = ">=1.13.0"
matplotlib = ">=3.9.2"
numpy = ">=2.1.3"
streamlit = ">=1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
